Revert "native image"
This reverts commit 7dab69d65423248a08859cf8db027030dfbd9efe.